--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "name": "simditor-markdown",
+  "name": "@etu/simditor-markdown",
   "description": "Add markdown editing mode for simditor.",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "main": "lib/simditor-markdown.js",
-  "homepage": "https://github.com/farthinker/simditor-markdown",
+  "homepage": "https://github.com/etu-front/simditor-markdown",
   "author": {
-    "name": "farthinker",
-    "email": "farthinker@gmail.com"
+    "name": "invalidtoken",
+    "email": "opensource@etutech.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/farthinker/simditor-markdown.git"
+    "url": "https://github.com/etu-front/simditor-markdown"
   },
   "bugs": {
-    "url": "https://github.com/farthinker/simditor-markdown/issues"
+    "url": "https://github.com/etu-front/simditor-markdown"
   },
   "scripts": {
-    "test": "grunt test --verbose"
+    "build": "babel --presets es2015 ./src/simditor-markdown.js -o ./lib/simditor-markdown.js"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
     "jquery": "~2.1.4",
+    "markdown-it": "^8.3.1",
     "simditor": "~2.3.4",
-    "to-markdown": "~1.3.0",
-    "marked": "~0.3.5"
-  },
-  "devDependencies": {
-    "grunt": "0.x",
-    "grunt-contrib-watch": "0.x",
-    "grunt-contrib-sass": "0.x",
-    "grunt-contrib-coffee": "0.x",
-    "grunt-contrib-jasmine": "0.x",
-    "grunt-umd": "2.x"
+    "upndown": "^2.1.0"
   }
 }
